# ai-engineering-fordham

./: .gitattributes  .gitignore  2.working-with-llms.ipynb  4.embeddings-semantic-search.ipynb  5.you-can-just-build-things.ipynb  PORTFOLIO.md  class_notes.txt  demo.txt  fordham_rag_app.py  helpers.py  homework-1.ipynb  homework-2.ipynb  homework-3.ipynb  homework-4.ipynb  prepare_data.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: embeddings.npy
data/fordham-website/: CARE.md  about.md  about_campuses_lincoln-center-campus.md  about_campuses_lincoln-center-campus_fordhams-sculpture-walk.md  about_campuses_lincoln-center-campus_fordhams-sculpture-walk_featured-artists_bjorn-skaarup.md  about_campuses_lincoln-center-campus_fordhams-sculpture-walk_featured-artists_chaim-gross.md  about_campuses_lincoln-center-campus_fordhams-sculpture-walk_featured-artists_harry-m-stierwalt-jr.md  about_campuses_lincoln-center-campus_fordhams-sculpture-walk_featured-artists_jane-dedecker.md  about_campuses_lincoln-center-campus_fordhams-sculpture-walk_featured-artists_leonardo-nierman.md  about_campuses_online-campus_resources-for-online-students.md  about_campuses_rose-hill-campus_celebrating-the-bronx.md  about_campuses_the-louis-calder-center.md  (+4697 more)
fordham_chatbot/: PORTFOLIO.md  fordham_rag_app.py  prepare_data.py  pyproject.toml  requirements.txt
temp/: update_notebook_chunking.py  update_notebook_data.py  update_notebook_embedding.py  update_notebook_path.py  update_notebook_retrieval.py  update_notebook_robust_loading.py
(+3936 files in other folders)
