[project]
name = "ai-engineering-fordham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
    "openai>=2.15.0",
    "pandas>=2.2.1",
    "python-dotenv>=1.2.1",
    "numpy<2",
    "audio-recorder-streamlit>=0.0.10",
    "streamlit>=1.31.0",
]
